decided on max width and fixed a grid alignment issue

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -26,7 +26,7 @@ html{
 
 .home-grid-wrapper{
 	width: 100%;
-	max-width: 1000px;
+	max-width: 850px;
 	margin: 1em auto;
 	padding: 1em;
 	display: grid;
@@ -43,11 +43,12 @@ html{
 
 	h2.intro{
 		width: 1em;
+		margin-left: .5em;
 		grid-column: 1;
 		grid-row: 1 / span 3;
 		writing-mode: vertical-rl;
 		align-self: end;
-		justify-self: center;
+		justify-self: left;
 		color: white;
 		font-size: 3em;
 		font-weight: 300;
